--- a/src_mini_chem/makefile
+++ b/src_mini_chem/makefile
@@ -1,6 +1,8 @@
 # for gfortran Compiler
 #===================
 
+LS_CONFIG  =  -DFULL_ALGEBRA
+
 F90 = gfortran
 F90LINKER =  gfortran
 
@@ -9,7 +11,7 @@ F90LINKER =  gfortran
 #FFLAGS	= -Og -pipe -Wall -Wextra -g -fbacktrace
 
 #Serial flags
-FFLAGS  = -O3 -pipe
+FFLAGS  = -O3 -pipe $(LS_CONFIG)
 
 #Parallel flags
 #FFLAGS	= -O3 -pipe -fopenmp
@@ -30,16 +32,18 @@ DEFS      =
 INCLUDES  =
 LFLAGS    = $(FFLAGS)
 
-
 OBJECTS = \
 lapack.o \
 lapackc.o \
+dlamch.o \
 dc_lapack.o \
+LS_Solver.o \
 seulex.o \
 rodas.o \
 radau5.o \
 dvode.o \
 dlsode.o \
+ROS_TLM_f90_Integrator.o \
 mini_ch_precision.o \
 mini_ch_class.o \
 mini_ch_read_reac_list.o \
@@ -49,13 +53,14 @@ mini_ch_i_rodas.o \
 mini_ch_i_radau5.o \
 mini_ch_i_dvode.o \
 mini_ch_i_dlsode.o \
+mini_ch_i_Rosenbrock.o \
 mini_ch_main.o \
 
 
 # executable statement
 EXECS  = ../mini_chem
 
-.SUFFIXES : .o .f90 .f
+.SUFFIXES : .o .f90 .f .F90
 
 default: mini_chem
 
@@ -66,6 +71,9 @@ clean:
 	rm -f *.o *.mod *~ *__genmod.f90 $(EXECS)
 
 .f90.o:
+	$(F90) $(FFLAGS) $(DEFS) -c $<
+
+.F90.o:
 	$(F90) $(FFLAGS) $(DEFS) -c $<
 
 .f.o:
