--- a/src_mini_chem/makefile
+++ b/src_mini_chem/makefile
@@ -1,7 +1,10 @@
 # for gfortran Compiler
 #===================
 
+
 LS_CONFIG  =  -DFULL_ALGEBRA
+BLAS=/Users/gl20y334/lapack-3.10.1/librefblas.a
+LAPACK=/Users/gl20y334/lapack-3.10.1/liblapack.a
 
 F90 = gfortran
 F90LINKER =  gfortran
@@ -33,9 +36,6 @@ INCLUDES  =
 LFLAGS    = $(FFLAGS)
 
 OBJECTS = \
-lapack.o \
-lapackc.o \
-dlamch.o \
 dc_lapack.o \
 LS_Solver.o \
 seulex.o \
@@ -43,7 +43,8 @@ rodas.o \
 radau5.o \
 dvode.o \
 dlsode.o \
-ROS_TLM_f90_Integrator.o \
+ROS_f90_Integrator.o \
+SDIRK_f90_Integrator.o \
 mini_ch_precision.o \
 mini_ch_class.o \
 mini_ch_read_reac_list.o \
@@ -54,7 +55,12 @@ mini_ch_i_radau5.o \
 mini_ch_i_dvode.o \
 mini_ch_i_dlsode.o \
 mini_ch_i_Rosenbrock.o \
+mini_ch_i_sdirk.o \
 mini_ch_main.o \
+
+# lapack.o \
+# lapackc.o \
+# dlamch.o \
 
 
 # executable statement
@@ -65,7 +71,7 @@ EXECS  = ../mini_chem
 default: mini_chem
 
 mini_chem: $(OBJECTS)
-	$(F90LINKER) $(LFLAGS) $(OBJECTS) -o $(EXECS)
+	$(F90LINKER) $(LFLAGS) $(OBJECTS) -o $(EXECS) $(LAPACK) $(BLAS)
 
 clean:
 	rm -f *.o *.mod *~ *__genmod.f90 $(EXECS)
