--- a/src_mini_chem_dvode/makefile
+++ b/src_mini_chem_dvode/makefile
@@ -20,6 +20,11 @@ FFLAGS	= -O3 -pipe -fopenmp
 #F90 = ifort
 #F90LINKER = ifort
 
+## OR
+
+#F90 = ifx
+#F90LINKER = ifx
+
 #FFLAGS   = -O0 -g -traceback -fpp -prec-div -fp-model source -fpe0 -ipo
 #FFLAGS    = -O0 -g -traceback -xHost -fpp -fp-model source -qopenmp -ipo
 #FFLAGS    = -O3 -qopenmp -fpp -fp-model source -ipo
