--- a/src_mini_chem_dlsode/makefile
+++ b/src_mini_chem_dlsode/makefile
@@ -5,29 +5,22 @@ F90 = gfortran
 F90LINKER =  gfortran
 
 #Debugging and development flags
-#FFLAGS	= -Og -g -pipe -Wall -Wextra -fbacktrace -fcheck=all -ffpe-trap=invalid,zero,overflow
+FFLAGS	= -Og -g -pipe -Wall -Wextra -fbacktrace -fcheck=all -ffpe-trap=invalid,zero,overflow
 #FFLAGS	= -Og -pipe -Wall -Wextra -g -fbacktrace
 
 #Serial flags
-FFLAGS  = -O3 -pipe
+#FFLAGS  = -O3 -pipe
 
-#Parallel flags
-#FFLAGS	= -O3 -pipe -fopenmp 
-
-# for ifort Compiler
+# for intel Compiler
 #====================
-
-#F90 = ifort
-#F90LINKER = ifort
-
-## OR
 
 #F90 = ifx
 #F90LINKER = ifx
 
 #FFLAGS   = -O0 -g -traceback -fpp -prec-div -fp-model source -fpe0 -ipo
-#FFLAGS    = -O0 -g -traceback -xHost -fpp -fp-model source -qopenmp -ipo
-#FFLAGS    = -O3 -qopenmp -fpp -fp-model source -ipo
+#FFLAGS    = -O3 -fpp -fp-model source -ipo
+
+# for nvfortran compiler
 
 #====================
 
