--- a/src_mini_chem_ros4/makefile
+++ b/src_mini_chem_ros4/makefile
@@ -5,11 +5,11 @@ F90 = gfortran
 F90LINKER =  gfortran
 
 #Debugging and development flags
-FFLAGS	= -Og -g -pipe -Wall -Wextra -fbacktrace -fcheck=all -ffpe-trap=invalid,zero,overflow
+#FFLAGS	= -Og -g -pipe -Wall -Wextra -fbacktrace -fcheck=all -ffpe-trap=invalid,zero,overflow
 #FFLAGS	= -Og -pipe -Wall -Wextra -g -fbacktrace
 
 #Serial flags
-#FFLAGS  = -O3 -pipe 
+FFLAGS  = -O3 -pipe 
 
 # for intel Compiler
 #====================
@@ -18,7 +18,15 @@ FFLAGS	= -Og -g -pipe -Wall -Wextra -fbacktrace -fcheck=all -ffpe-trap=invalid,z
 #F90LINKER = ifx
 
 #FFLAGS   = -O0 -g -traceback -fpp -prec-div -fp-model source -fpe0 -ipo
-#FFLAGS    = -O3 -fpp -fp-model source -ipo
+#FFLAGS   = -O3 -fpp -fp-model source -ipo
+
+# for nvfortran compiler
+#====================
+
+#F90 = nvfortran
+#F90LINKER = nvfortran
+
+#FFLAGS    = -O1
 
 #====================
 
