add CE interpolation routine

--- a/src_mini_chem_ros4/makefile
+++ b/src_mini_chem_ros4/makefile
@@ -40,11 +40,11 @@ dc_decsol.o \
 ros4.o \
 mini_ch_precision.o \
 mini_ch_class.o \
+mini_ch_ce_interp.o \
 mini_ch_read_reac_list.o \
 mini_ch_chem.o \
 mini_ch_i_ros4.o \
-mini_ch_main.o
-
+main.o
 
 # executable statement
 EXECS  = ../mini_chem_ros4
