--- a/src_mini_chem_rodas/makefile
+++ b/src_mini_chem_rodas/makefile
@@ -40,10 +40,11 @@ dc_decsol.o \
 rodas.o \
 mini_ch_precision.o \
 mini_ch_class.o \
+mini_ch_ce_interp.o \
 mini_ch_read_reac_list.o \
 mini_ch_chem.o \
 mini_ch_i_rodas.o \
-mini_ch_main.o
+main.o
 
 
 # executable statement
