--- a/src_mini_chem_photo/makefile
+++ b/src_mini_chem_photo/makefile
@@ -21,7 +21,7 @@ OBJECTS = \
     mini_ch_precision.o \
     mini_ch_class.o \
     mini_ch_ce_interp.o \
-    mini_ch_read_reac_list.o \
+    mini_ch_init.o \
     mini_ch_chem.o \
     mini_ch_i_dlsode_photo.o \
     main.o
